# projectx

./: .gitignore  README.md  main.py  pyproject.toml
backend/core/: config.py  engine.py
