[project]
name = "projectx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.104.1",
    "apscheduler>=3.11.2",
    "fastapi[standard]>=0.136.3",
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "pyttsx3>=2.99",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
